--- a/package.json
+++ b/package.json
@@ -1,18 +1,1 @@
-{
-  "name": "fraud-risk-assessment",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "tailwindcss": "^2.0.0"
-  },
-  "devDependencies": {
-    "vite": "^2.0.0",
-    "typescript": "^4.0.0"
-  }
-}
+{"name":"fraud-risk-assessment","version":"1.0.0","scripts":{"dev":"vite","build":"vite build","serve":"vite preview"},"dependencies":{"react":"^18.2.0","react-dom":"^18.2.0","tailwindcss":"^3.4.0","vite":"^4.3.9","@vitejs/plugin-react":"^4.0.0","typescript":"^5.0.0"}}
