--- a/package.json
+++ b/package.json
@@ -1,1 +1,33 @@
-{"name":"fraud-risk-assessment-frontend","version":"1.0.0","private":true,"scripts":{"dev":"vite","build":"vite build","preview":"vite preview","lint":"eslint . --ext .js,.jsx,.ts,.tsx","format":"prettier --write ."},"dependencies":{"react":"^18.2.0","react-dom":"^18.2.0","react-router-dom":"^6.14.1","@tanstack/react-query":"^4.36.0","@supabase/supabase-js":"^2.10.0","chart.js":"^4.4.0","react-chartjs-2":"^5.2.0","jspdf":"^2.5.1","html2canvas":"^1.4.1","xlsx":"^0.18.5","classnames":"^2.3.2","axios":"^1.4.0"},"devDependencies":{"vite":"^4.5.0","@vitejs/plugin-react":"^4.0.0","tailwindcss":"^3.5.0","postcss":"^8.4.0","autoprefixer":"^10.4.0"}}
+{
+  "name": "fraud-risk-assessment-frontend",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "format": "prettier --write ."
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
+    "@tanstack/react-query": "^4.36.0",
+    "@supabase/supabase-js": "^2.10.0",
+    "chart.js": "^4.4.0",
+    "react-chartjs-2": "^5.2.0",
+    "jspdf": "^2.5.1",
+    "html2canvas": "^1.4.1",
+    "xlsx": "^0.18.5",
+    "classnames": "^2.3.2",
+    "axios": "^1.4.0"
+  },
+  "devDependencies": {
+    "vite": "^4.5.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0"
+  }
+}
